--- a/translate/index2.html
+++ b/translate/index2.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>鼠标hover图片CSS3动画特效</title>
-	<link href="css/one.css" rel="stylesheet">
-	<link href="css/two.css" rel="stylesheet">
+	<link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<link href="http://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/htmleaf-demo.css">
 	<style type="text/css">
 		.demo{
