--- a/jQuery手风琴/index.html
+++ b/jQuery手风琴/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>jquery横向手风琴效果|DEMO_jQuery之家-自由分享jQuery、html5、css3的插件库</title>
+	<title>jquery横向手风琴效果</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/htmleaf-demo.css">
 	<link href="css/style.css" type="text/css" rel="stylesheet">
@@ -12,11 +12,7 @@
 <body>
 	<div class="htmleaf-container">
 		<header class="htmleaf-header">
-			<h1>jquery横向手风琴效果 <span>A jQuery plugin for image slider</span></h1>
-			<div class="htmleaf-links">
-				<a class="htmleaf-icon icon-htmleaf-home-outline" href="http://www.htmleaf.com/" title="jQuery之家" target="_blank"><span> jQuery之家</span></a>
-				<a class="htmleaf-icon icon-htmleaf-arrow-forward-outline" href="http://www.htmleaf.com/jQuery/Accordion/201709234755.html" title="返回下载页" target="_blank"><span> 返回下载页</span></a>
-			</div>
+			<h1>jquery横向手风琴效果</h1>
 		</header>
 		<div class="banner-container">
 		        <ul class="ul-width" style="width: 16240px;">
@@ -44,17 +40,6 @@
 		        </ul>
 		        <div class="clear"></div>
 		    </div>
-		<div class="related">
-		    <h3>如果你喜欢这个插件，那么你可能也喜欢:</h3>
-		    <a href="http://www.htmleaf.com/jQuery/Accordion/201612284289.html">
-			  <img src="related/1jpg" width="300" alt="jquery扁平风格的手风琴特效"/>
-			  <h3>jquery扁平风格的手风琴特效</h3>
-			</a>
-			<a href="http://www.htmleaf.com/jQuery/Accordion/201612074245.html">
-			  <img src="related/2.jpg" width="300" alt="纯js带弹性动画的手风琴图片相册特效"/>
-			  <h3>纯js带弹性动画的手风琴图片相册特效</h3>
-			</a>
-		</div>
 	</div>
 	
 	<script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
